--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script async defer src="https://apis.google.com/js/api.js"></script>
+  <!-- <script async defer src="https://apis.google.com/js/api.js"></script> -->
+  <script src="https://apis.google.com/js/platform.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
